tests/NormalTests/paczka1/fuzzy1/11882041.err
Error in line 4: HwnMwbbYn S803 41,1
Error in line 14: HwnMwbbYn S235 58,9
Error in line 24: HtM S454 87,8
Error in line 30: HtM A820 95,5
